# virae

./: Cargo.toml  README.md
examples/shmuppin/: main.rs
examples/terrain-2d/: main.rs  shader.wgsl
examples/testing/: Cargo.toml  main.rs  shader.wgsl
shaders/: shader.wgsl
src/: geo.rs  lib.rs  main.rs  shader.wgsl  text.rs  types.rs  window.rs
