[package]
name = "virae"
version = "0.1.0"
authors = ["June Elva"]
edition = "2021"

[dev-dependencies]
pollster = "0.3.0"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
glam = { version = "0.27.0", features = ["bytemuck"] }
winit = { version = "0.29.10", features = ["rwh_05"] }
glyphon = "0.5.0"
wgpu = "0.19"
image = "0.25.1"
